--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "fishingapp",
   "version": "1.0.0",
   "main": "index.js",
-  "type": "module",
+  "type":"commonjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "install": "cd client && npm install",
-    "dev:client": "cd client && npm start",
+    "dev-client": "cd client && npm start",
     "preinstall": "cd server && npm install",
-    "dev:server": "cd server && npm run dev",
+    "dev-server": "cd server && nodemon index.js",
     "dev-concur": "concurrently \"npm run dev:server\" \"npm run dev:client\""
   },
   "keywords": [],
