--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev-client": "cd client && npm start",
     "preinstall": "cd server && npm install",
     "dev-server": "cd server && nodemon index.js",
-    "dev-concur": "concurrently \"npm run dev:server\" \"npm run dev:client\""
+    "dev-concur": "concurrently \"npm run dev-server\" \"npm run dev-client\""
   },
   "keywords": [],
   "author": "",
@@ -17,6 +17,7 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
