--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "install": "cd client && npm install",
-    "dev-client": "cd client && npm start",
+    "dev-client": "cd client && npm run dev",
     "preinstall": "cd server && npm install",
     "dev-server": "cd server && nodemon index.js",
     "dev-concur": "concurrently \"npm run dev-server\" \"npm run dev-client\""
